src/objects/KAM_Queuable_Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AsyncApexJobId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AsyncApexJobId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Detail__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Detail</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RequestId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>RequestId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>KAM Queuable Error Log</label>
    <nameField>
        <displayFormat>KAMQEL-{0000000}</displayFormat>
        <label>KAM Queuable Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KAM Queuable Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>